Fixed width of code sample and main padding for better UX on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,10 @@ header {
     border-bottom: 1px solid #ddd;
 }
 
+main {
+    padding: 0 10px;
+}
+
 h2 {
     font-size: 1.6em;
 }
@@ -63,7 +67,7 @@ footer {
 pre[class*="language-"]
 {
     margin: 0 auto !important;
-    width: 700px !important;
+    max-width: 700px !important;
     padding: 10px !important;
     background: #f9f9f9 !important;
     border: 1px solid #e9e9e9 !important;
